# gh-jira-sync-bot

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTE.md  Dockerfile  README.md  env.example  pyproject.toml  settings.yaml  tox.ini
.github/workflows/: ci.yaml  publish-image.yaml  redeliver-webhooks.yaml
.github/workflows/scripts/: redeliver-failed-deliveries.js  redeliver-failed-deliveries.mjs
ADRs/: 001-Change-Issue opened with labels.md
github_jira_sync_app/: __init__.py  main.py  pulse_utils.py  settings.yaml
github_jira_sync_app/instrumentation/: metrics.py  tracing.py
tests/instrumentation/: test_instrumentation.py
tests/unit/: conftest.py  dumm_env  test_pulse_utils.py  test_server.py  test_utils.py
tests/unit/payloads/: comment_created.json  comment_created_by_user.json  issue_closed_as_completed.json  issue_closed_as_not_planned.json  issue_closed_with_pulse.json  issue_created_with_label.json  issue_created_without_label.json  issue_edited.json  issue_labeled_correct.json  issue_labeled_synced_to_jira.json  issue_reopened.json  issue_unlabeled.json  issue_with_long_title.json
tests/unit/url_responses/: auth_github_responses.yaml  auth_github_responses_sync_label.yaml  auth_github_responses_sync_label_not_found.yaml  github_add_comment.yaml  github_auth.yaml  github_responses_add_synced_label.yaml  github_responses_synced_label_exists.yaml  github_responses_synced_label_notfound.yaml  github_settings_with_gh_comment.yaml  github_settings_with_gh_sync_label.yaml  github_settings_with_labels.yaml  github_settings_with_pulse.yaml  (+13 more)
