[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "github_jira_sync_app"
authors = [{name = "Maksim Beliaev", email = "beliaev.m.s@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]

dependencies = [
    "fastapi==0.95.0",
    "pyyaml==6.0.0",
    "pygithub==1.58.1",
    "uvicorn[standard]==0.18.3",
    "load_dotenv==0.1.0",
    "jira==3.5.0",
]

# development dependencies
[project.optional-dependencies]
test = [
    "pre-commit",
]

deploy = [
    "flit==3.7.1",
]
